# updatedirdates

./: .coverage  .gitignore  README.md  TESTING.md  UpdateDirDates-Specs.md  pyproject.toml  requirements-dev.txt
.claude/: settings.local.json
14-fy12/Academy13/: FQMOI.ppt
14-fy12/Academy13/peugeot/: Automotive_2_CxO Discussion.pptx  ICP1_Peugeot_Apr19.pptx  Peer_Comparison_Analysis_for_peugeot.doc  Peogot_EA Report.xlsx
14-fy12/BI Workshop/: BI - WorkshopDeliveryGuide.docx  EntIPOffsiteTraining_VRFAcceleratorOverview_v1 0.pptx  Flow.vsd  Presntation Slides.pptx  Structure.xlsx
src/updatedirdates/: __init__.py  main.py  updater.py
src/updatedirdates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_main.py  test_updater.py
tr14/: Consuming a RESTful Service.docx  MVC vs MVP vs MVVM.docx
